assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;800;900&family=Playfair+Display:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,600&display=swap');

:root {
  --box-x-padding: 2rem;
  --box-y-padding: 2rem;
}

html,
body {
  scroll-behavior: smooth;
  background-color: #fafafa;
}

* {
    margin: 0;
    padding: 0;
    border: none;
}

/* ----------------------- Global Styles & Custom Classes */

h1 {
  font-family: 'Playfair Display', serif;
  font-weight: 400;
  line-height: 1.5;
  font-size: 6rem;
}

h2,
h3,
h4,
h5,
h6 {
  font-family: 'Playfair Display', serif;

}

p {
  font-family: 'futura-pt', sans-serif;
  font-size: 1rem;
  font-weight: 400;
  margin-bottom: 2rem;
}

.body-font {
  font-family: 'futura-pt', sans-serif;
  font-size: 1rem;
  letter-spacing: 1px;
  font-weight: 400;
  line-height: 1.5;
}

a {
  font-family: 'futura-pt', sans-serif;
  text-decoration: none;
  color: #3c87af;
}

.link-font {
  font-family: 'futura-pt', sans-serif;
  text-transform: uppercase;
  letter-spacing: 1px;
  font-size: 1rem;
  text-decoration: none;
  color: #3c87af;
}

a:hover,
.link-font:hover {
  color: #15394c;
}

.rainbow-text {
  background-image: linear-gradient(to left, violet, indigo, blue, green, yellow, orange, red);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  letter-spacing: 3.45px;
  font-weight: 350;
}

.section-header {
  font-family: 'Playfair Display', serif;
  font-size: 2.5rem;
  font-weight: 600;
  color:	#282828;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  margin-bottom: 2rem;
  text-shadow: 0px 4px 3px rgba(52, 52, 52, 0.4),
  0px 8px 13px rgba(52, 52, 52,0.1),
  0px 18px 23px rgba(52, 52, 52,0.1);
}

.small-text {
  font-family: 'futura-pt', sans-serif;
  font-size: 1rem;
}

/* ----------------------- Navigation */
#logo {
    float: left;
    font-family: 'futura-pt', sans-serif;
    font-size: 260%;
    color: #0a0a0a;
    letter-spacing: 4px;
}
.navbar a{
  font-size:110%;
  color:#000000;
}


/* ------------------------------------ Jumbotron */
.center {
    text-align: center;
}

#jumbotron-section {
    clear: both;
    font-family: 'futura-pt', sans-serif;
    position: static;
    min-height: 100vh;
    height: 100%;
    background-color: #cfe2f3;
    width: 100%;
}

.display-4 {
    position: relative;
    margin-top: 25px;
    height: 80px;
}

p small {
    position: relative;
    height: 100px;
}

.gallery-button {
    height: 250px;
}

.gallery-button p {
    height: 200px;
    position: relative;
    bottom: 0;
}

.gallery-button p a {
    position: relative;
    margin-top: 100px;
}

.jumbotron .btn {
    position: relative;
    border: 1px solid #f0ad4e;
    border-radius: 5px;    
    bottom: 0;
}

/* ----------------------- Gallery */
.image {
    grid-row: 1;
    grid-column: 2;
    margin-left: -2rem;
    opacity: 0.7;
    animation: image-in 1s cubic-bezier(0.5, 0, 0.1, 1) 2s backwards;
}

.content a {
    text-decoration: none;
    border: 1px solid #b3b3b3;
    border-radius: 1em;
    padding: 1em 2em;
    text-transform: uppercase;
    font-size: 11px;
    font-weight: 700;
    letter-spacing: 0.05em;
    color: inherit;
    display: inline-block;
    background-color: rgba(0, 0, 0, 0.417)
  }
  
  .img {
    position: relative;
  }
  
  .img a {
    position: absolute;
    left: 0;
    bottom: 0;
  }
  
  img .art {
    max-width: 100%;
    height: auto;
    vertical-align: middle;
    box-shadow: 0 0.2em 1.2em rgba(61,48,41,0.1);
  }
  
h2.artwork-title {
    margin: 0 0 1rem;
    font-family: serif;
    position: relative;
    font-size: 2rem;
}

p {
    margin-top: 0;
    margin-bottom: var(--box-y-padding);
    line-height: 1.5;
  }

/* ----------------------- Modal */
.resources li {
    list-style-type: none;
}

.resources a {
    text-decoration: none;
    color: #000000;
}

.resources a:hover {
    border-bottom: 1px dashed #000000;
    color: #dd7272;
}

.modal-content {
    border-radius: 0 !important;
    background-image: linear-gradient(to bottom right, violet, indigo, blue, green, yellow, orange, red);
    padding: 3px;
}

.modal-header {
    border-bottom: none !important;
    background-color: #ffffff;
    border-radius: 0 !important;
}

.modal-body {
    background-color: #ffffff;
}

/* ----------------------- Media Queries */
@media (min-width: 40em) {
    .artwork-row {
      display: grid;
      grid-template-rows: repeat(3, auto);
      grid-template-columns: 4fr 4fr 5fr;
      grid-template-areas: '. . title' 'img img content' 'img img .';
      max-width: 1000px;
      margin-right: auto;
      margin-left: auto;
    }
    .artwork-row::after {
      content: '';
      grid-column: 2/-1;
      grid-row: 1/3;
      position: relative;
      z-index: -1;
      background-color: #eef6f79c;
      /* box-shadow: 1px 3px 6px rgba(47, 47, 47, 0.38); */
      box-shadow: rgba(83, 83, 83, 0.15) 0px 15px 25px, rgba(101, 101, 101, 0.932) 0px 3px 28px;
      /* box-shadow: rgba(0, 0, 0, 0.15) 2.4px 2.4px 3.2px; */
    }
    h2.artwork-heading {
        grid-area: title;
        font-size: 3em;
        padding-top: var(--box-y-padding);
        padding-left: var(--box-x-padding);
      }
      .content {
        grid-area: content;
        padding-bottom: var(--box-y-padding);
        padding-left: var(--box-x-padding);
        padding-right: var(--box-x-padding);
      }
      .img {
        grid-area: img;
      }
    }

@media (min-width: 60em) {
    :root {
      --box-x-padding: 3rem;
      --box-y-padding: 6rem;
    }
  }

  /* ------------------------------------- Team page */

  div .card {
    border: none;
    margin-right: 0;
    margin-left: 0;
  }

  .team img {
    width: 250px;
    height: 250px;
    border-radius:50% ;
  }

  #team-card img {
    border: 5px solid #cf2e2e;
  }

  #team-card-1 img {
    border: 5px solid #ff6900;    
  }

  #team-card-2 img {
    border: 5px solid #fcb900;    
  }

  #team-card-3 img {
    border: 5px solid #00d084;    
  }

  #team-card-4 img {
    border: 5px solid #0693e3;    
  }

  .card-img-top {
    align-self: center;
  }
 

